# mold-cmake-c

./: .gitignore  CMakeLists.txt  README.md
myproject/: CMakeLists.txt
test/: CMakeLists.txt
test/tests/: CMakeLists.txt
